package fr.septmg.ThreeSpotGame2;

/**
 * This enumeration represents possible adjacent directions.
 */
public enum AdjDirection {
    //NULL,
    
    /**
     * The direction upwards.
     */
    UP,

    /**
     * The direction to the right.
     */
    RIGHT,
    
    // BOTH,
}