package fr.septmg.ThreeSpotGame2;

/**
 * Enum representing the color cases in the ThreeSpot game.
 */
public enum ColorCase {
    /**
     * Represents an empty case.
     */
    EMPTY,

    /**
     * Represents a case filled with the color red.
     */
    RED,

    /**
     * Represents a case filled with the color white.
     */
    WHITE,

    /**
     * Represents a case filled with the color blue.
     */
    BLUE
}
